--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
